[refactor] 소스 정리